--- a/WindowExplorer/Sources/Controllers/PlayerViewController/Views/PlayerControl.xib
+++ b/WindowExplorer/Sources/Controllers/PlayerViewController/Views/PlayerControl.xib
@@ -5,7 +5,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <customObject id="-2" userLabel="File's Owner" customClass="PlayerControl" customModule="MapExplorer_macOS" customModuleProvider="target">
+        <customObject id="-2" userLabel="File's Owner" customClass="PlayerControl" customModule="WindowExplorer" customModuleProvider="target">
             <connections>
                 <outlet property="contentView" destination="c22-O7-iKe" id="wDa-Gx-KAp"/>
                 <outlet property="currentTimeLabel" destination="IOp-BE-Ma6" id="l9z-jc-45f"/>
@@ -26,7 +26,7 @@
                     </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="right" title="00:00" id="QBG-u6-t2N">
                         <font key="font" size="14" name="Menlo-Regular"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
@@ -44,7 +44,7 @@
                     </constraints>
                     <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" alignment="left" title="00:00" id="dfV-WV-JQH">
                         <font key="font" size="14" name="Menlo-Regular"/>
-                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                        <color key="textColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                     </textFieldCell>
                 </textField>
